--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
     "quill": "^1.3.6",
+    "sanitize-html": "^2.11.0",
     "sharp": "^0.32.6",
     "validator": "^13.11.0"
   },
